made it work on windows

--- a/spikes/cuke-c/nbproject/project.properties
+++ b/spikes/cuke-c/nbproject/project.properties
@@ -1,7 +1,7 @@
 file.reference.cuke-c-lib=lib
 file.reference.cuke-c-test=test
 javac.classpath=
-main.file=
+main.file=ripmunk/extconf.rb
 platform.active=Ruby_4
 source.encoding=UTF-8
 src.dir=${file.reference.cuke-c-lib}
