set backgroun to green

--- a/sun/nbproject/project.properties
+++ b/sun/nbproject/project.properties
@@ -1,7 +1,7 @@
 file.reference.cuke-c-lib=lib
 file.reference.cuke-c-test=test
 javac.classpath=
-main.file=game.rb
+main.file=main.rb
 platform.active=Ruby_4
 source.encoding=UTF-8
 src.ext.dir=ext
