added a player, figured out how to do transparency in pngs, dont forget to call flush for screenshots

--- a/sun/Rakefile
+++ b/sun/Rakefile
@@ -5,6 +5,7 @@ require 'hoe'
 require 'rake/testtask'
 HOE = Hoe.spec 'ripmunk' do
   developer('Ben Goodspeed', 'b.goodspeed@gmail.com')
+  self.version   = '0.1.0'
   self.readme_file   = 'README.rdoc'
   self.history_file  = 'CHANGELOG.rdoc'
   self.extra_rdoc_files  = FileList['*.rdoc']
