added support for gosu player controls

--- a/sun/Gemfile
+++ b/sun/Gemfile
@@ -11,6 +11,6 @@ gem "devil", :platforms => [:ruby, :mingw]
 gem "chunky_png"
 gem "chipmunk"
 
-
+gem "mocha"
 gem "rspec-expectations", :git => "git://github.com/rspec/rspec-expectations.git"
 gem "cucumber", :git => "git://github.com/cucumber/cucumber.git"
