rudimentary game clock

--- a/sun/Rakefile
+++ b/sun/Rakefile
@@ -24,5 +24,11 @@ Cucumber::Rake::Task.new do |t|
   t.cucumber_opts = %w{--format progress}
 end
 
+Cucumber::Rake::Task.new("fast_specs") do |t|
+  t.libs << ['lib']
+  t.cucumber_opts = %w{--format progress --tags ~@slow}
+end
+
+
 Rake::Task[:default].prerequisites << :cucumber
 # vim: syntax=ruby
