--- a/sun/Rakefile
+++ b/sun/Rakefile
@@ -28,6 +28,10 @@ Cucumber::Rake::Task.new("fast_specs") do |t|
   t.libs << ['lib']
   t.cucumber_opts = %w{--format progress --tags ~@slow}
 end
+Cucumber::Rake::Task.new("slow_specs") do |t|
+  t.libs << ['lib']
+  t.cucumber_opts = %w{--format progress --tags @slow}
+end
 
 
 Rake::Task[:default].prerequisites << :cucumber
