outline of ai definition

--- a/sun/Gemfile
+++ b/sun/Gemfile
@@ -10,6 +10,8 @@ gem "rdoc"
 gem "devil", :platforms => [:ruby, :mingw]
 gem "chunky_png"
 gem "chipmunk"
+gem "statemachine"
+
 
 gem "mocha"
 gem "rspec-expectations", :git => "git://github.com/rspec/rspec-expectations.git"
