--- a/sun/test-data/menus/main.yml
+++ b/sun/test-data/menus/main.yml
@@ -2,6 +2,7 @@ menu:
   menu_id: main_menu
   entries:
     - display_text: Option One
-      action: todo_replace_me
+      action: debug_print
     - display_text: Another Option ... 2
-      action: todo_replace_me2
+      action: debug_print
+      action_argument: arg2
