--- a/sun/game-data/levels/collisions/collisions.yml
+++ b/sun/game-data/levels/collisions/collisions.yml
@@ -1,6 +1,4 @@
-name: obstacle
-background_image: test-data/levels/obstacle/grass.jpg
-wayfinding: test-data/levels/obstacle/wayfinding.yml
+name: collisions
 measurements:
   width: 640
   height: 480
@@ -20,8 +18,8 @@ line_segments:
   - start_x: 0
     start_y: 480
     end_x: 640
+    end_y: 480 #the four walls
+  - start_x: 70
+    start_y: 0
+    end_x: 70
     end_y: 480
-  - start_x: 150
-    start_y: 150
-    end_x: 400
-    end_y: 150
