--- a/sun/test-data/collision_response/collision_response.yml
+++ b/sun/test-data/collision_response/collision_response.yml
@@ -6,6 +6,7 @@ collision_response:
     VectorFollower: [:removing2 ]
     Enemy: [ :blocking2 ]
   Enemy:
+    Enemy: [ ]
     VectorFollower: [ :damaging1, :removing2, :temporary_message1 ]
     Primitives::LineSegment: [ :blocking1 ]
     MouseCollisionWrapper: [ :mouse_pick1 ]
