--- a/sun/test-data/collision_response/collision_response.yml
+++ b/sun/test-data/collision_response/collision_response.yml
@@ -1,24 +1,24 @@
 collision_response:
-  EventEmitter:
-    Player: [ :trigger_event1 ]
-  Primitives::LineSegment:
-    Player: [ :blocking2 ]
-    VectorFollower: [:removing2 ]
-    Enemy: [ :blocking2 ]
-  Enemy:
-    Enemy: [ ]
-    VectorFollower: [ :damaging1, :removing2, :temporary_message1 ]
-    Primitives::LineSegment: [ :blocking1 ]
-    MouseCollisionWrapper: [ :mouse_pick1 ]
-  VectorFollower:
-    Player: []
-    Enemy: [ :damaging2, :removing1 ]
-    Primitives::LineSegment: [ :removing1 ]
-  Player:
-    Primitives::LineSegment: [ :blocking1 ]
-    VectorFollower: []
-    Enemy: [ :damaging1, :damaging2, :blocking1 ]
-    EventEmitter: [ :trigger_event2 ]
-    MouseCollisionWrapper: [ :mouse_pick1 ]
-  MouseCollisionWrapper:
-    Player: [ :mouse_pick1 ]
+  "EventEmitter":
+    "Player": [ trigger_event1 ]
+  "Primitives::LineSegment":
+    "Player": [ blocking2 ]
+    "VectorFollower": [:removing2 ]
+    "Enemy": [ blocking2 ]
+  "Enemy":
+    "Enemy": [ ]
+    "VectorFollower": [ damaging1, removing2, temporary_message1 ]
+    "Primitives::LineSegment": [ blocking1 ]
+    "MouseCollisionWrapper": [ mouse_pick1 ]
+  "VectorFollower":
+    "Player": []
+    "Enemy": [ damaging2, removing1 ]
+    "Primitives::LineSegment": [ removing1 ]
+  "Player":
+    "Primitives::LineSegment": [ blocking1 ]
+    "VectorFollower": []
+    "Enemy": [ damaging1, damaging2, blocking1 ]
+    "EventEmitter": [ trigger_event2 ]
+    "MouseCollisionWrapper": [ mouse_pick1 ]
+  "MouseCollisionWrapper":
+    "Player": [ mouse_pick1 ]
