--- a/sun/Gemfile
+++ b/sun/Gemfile
@@ -4,7 +4,7 @@ source "http://rubygems.org"
 gem "hoe"
 gem "opengl"
 gem "gosu"
-gem "texplay", :platforms => [:mswin, :mingw, :ruby]
+#gem "texplay", :platforms => [:mswin, :mingw, :ruby]
 
 gem "rake-compiler"
 gem "rdoc"
