--- a/sun/test-data/game.yml
+++ b/sun/test-data/game.yml
@@ -7,3 +7,4 @@ game:
   player: "game-data/players/player.yml"
   sound_manager: "game-data/sounds/sound_config.yml"
   heads_up_display: "game-data/hud/hud_config.yml"
+  new_game_level: "test-data/levels/demo/demo.yml"
