--- a/sun/test-data/new_game_load_screen.yml
+++ b/sun/test-data/new_game_load_screen.yml
@@ -7,3 +7,4 @@ game:
   player: "test-data/players/load_screen_player.yml"
   sound_manager: "game-data/sounds/sound_config.yml"
   heads_up_display: "test-data/hud/hud_blank.yml"
+  new_game_level: "test-data/levels/demo/demo.yml"
