made weapon usage not break if unequipped, added non-projectile weapons

--- a/sun/test-data/collision_response/collision_response.yml
+++ b/sun/test-data/collision_response/collision_response.yml
@@ -20,5 +20,7 @@ collision_response:
     "Enemy": [ damaging1, damaging2, blocking1 ]
     "EventEmitter": [ trigger_event2 ]
     "MouseCollisionWrapper": [ mouse_pick1 ]
+    "Weapon": [  ]
+#TODO note that player vs weapon collisions will need to be handled, eg check to see if it's your weapon
   "MouseCollisionWrapper":
     "Player": [ mouse_pick1 ]
