--- a/sun/test-data/new_game_load_screen.yml
+++ b/sun/test-data/new_game_load_screen.yml
@@ -9,3 +9,4 @@ game:
   heads_up_display: "test-data/hud/hud_blank.yml"
   new_game_level: "test-data/levels/demo/demo.yml"
   menu_for_load_game: "test-data/menus/load_game.yml"
+  game_load_path: "test-data/loads/"
