hacking on cuke/cpp integration using rice

--- a/spikes/cuke-cpp/Gemfile
+++ b/spikes/cuke-cpp/Gemfile
@@ -5,6 +5,7 @@ gem "hoe"
 gem "rake-compiler"
 gem "rdoc"
 gem "rice"
+gem "mocha"
 
 gem "rspec-expectations", :git => "git://github.com/rspec/rspec-expectations.git"
 gem "cucumber", :git => "git://github.com/cucumber/cucumber.git"
