--- a/sun/test-data/splash.yml
+++ b/sun/test-data/splash.yml
@@ -10,3 +10,4 @@ game:
   new_game_level: "test-data/levels/demo/demo.yml"
   menu_for_load_game: "test-data/menus/load_game.yml"
   game_load_path: "test-data/loads/"
+  splash_screen: "test-data/screens/splash_screen.png"
