--- a/sun/test-data/players/load_screen_player.yml
+++ b/sun/test-data/players/load_screen_player.yml
@@ -1,5 +1,5 @@
 player:
-  image_path: test-data/sprites/avatar.bmp
+  image_path: test-data/sprites/player20120411.png
   movement_distance: 2
   turn_speed: 5
   health: 5
