--- a/sun/game-data/new_game_load_screen.yml
+++ b/sun/game-data/new_game_load_screen.yml
@@ -11,3 +11,4 @@ game:
   menu_for_load_game: "test-data/menus/load_game.yml"
   game_load_path: "test-data/loads/"
   splash_screen: "test-data/screens/splash_screen.png"
+  game_over_menu: "test-data/menus/game_over.yml"
