--- a/sun/game-data/new_game_load_screen.yml
+++ b/sun/game-data/new_game_load_screen.yml
@@ -4,10 +4,10 @@ game:
   collision_response: "test-data/collision_response/collision_response.yml"
   level: "test-data/levels/load_screen/load_screen.yml"
   input_manager: "test-data/input/input_config.yml"
-  player: "test-data/players/load_screen_player.yml"
+  player: "game-data/players/load_screen_player.yml"
   sound_manager: "game-data/sounds/sound_config.yml"
-  heads_up_display: "test-data/hud/hud_blank.yml"
-  new_game_level: "test-data/levels/demo/demo.yml"
+  heads_up_display: "game-data/hud/hud_config.yml"
+  new_game_level: "game-data/levels/demo/demo.yml"
   menu_for_load_game: "test-data/menus/load_game.yml"
   game_load_path: "test-data/loads/"
   splash_screen: "test-data/screens/splash_screen.png"
