--- a/sun/game-data/players/player.yml
+++ b/sun/game-data/players/player.yml
@@ -5,5 +5,5 @@ player:
   turn_speed: 5
   health: 5
   max_health: 10
-  weapon_yaml: test-data/equipment/weapon.yml
+  weapon_yaml: game-data/equipment/gun.yml
   menu_action_delay: 12
