--- a/sun/test-data/levels/completion_at_frame_two/completion_at_frame_two.yml
+++ b/sun/test-data/levels/completion_at_frame_two/completion_at_frame_two.yml
@@ -1,6 +1,7 @@
 name: completion_at_frame_two
 background_image: test-data/levels/completion_at_frame_two/grass.jpg
 wayfinding: test-data/levels/completion_at_frame_two/wayfinding.yml
+reward_level: test-data/levels/bar/bar.yml
 measurements:
   width: 640
   height: 480
