added new music but it's choppy

--- a/sun/game-data/sounds/sound_config.yml
+++ b/sun/game-data/sounds/sound_config.yml
@@ -4,5 +4,5 @@ sound_manager:
       name: shoot
 
   songs:
-    - filename: test-data/music/music.wav
+    - filename: test-data/music/splash.wav
       name: music
