wired in saving

--- a/sun/test-data/loads/1/savedata.yml
+++ b/sun/test-data/loads/1/savedata.yml
@@ -1,3 +1,4 @@
+---
 savedata:
-  level: "test-data/levels/demo/demo.yml"
-  player: "test-data/players/player_moved.yml"
+  level: test-data/levels/demo/demo.yml
+  player: test-data/loads/1/player.yml
