--- a/sun/game-data/new_game_load_screen.yml
+++ b/sun/game-data/new_game_load_screen.yml
@@ -12,3 +12,4 @@ game:
   game_load_path: "test-data/loads/"
   splash_screen: "test-data/screens/splash_screen.png"
   game_over_menu: "test-data/menus/game_over.yml"
+  menu_for_save_game: "test-data/menus/save_game.yml"
