--- a/sun/test-data/demo.yml
+++ b/sun/test-data/demo.yml
@@ -9,3 +9,4 @@ game:
   heads_up_display: "game-data/hud/hud_config.yml"
   new_game_level: "test-data/levels/demo/demo.yml"
   menu_for_load_game: "test-data/menus/load_game.yml"
+  menu_for_save_game: "test-data/menus/save_game.yml"
