--- a/sun/game-data/new_game_load_screen.yml
+++ b/sun/game-data/new_game_load_screen.yml
@@ -9,7 +9,7 @@ game:
   heads_up_display: "game-data/hud/hud_config.yml"
   new_game_level: "game-data/levels/demo/demo.yml"
   menu_for_load_game: "test-data/menus/load_game.yml"
-  game_load_path: "test-data/loads/"
+  game_load_path: "game-data/loads/"
   splash_screen: "test-data/screens/splash_screen.png"
   game_over_menu: "test-data/menus/game_over.yml"
   menu_for_save_game: "test-data/menus/save_game.yml"
