--- a/sun/game-data/levels/reward/reward.yml
+++ b/sun/game-data/levels/reward/reward.yml
@@ -1,7 +1,7 @@
 name: reward
-background_image: test-data/levels/load_screen/grass.jpg
-background_music: test-data/music/music.wav
-wayfinding: test-data/levels/load_screen/wayfinding.yml
+background_image: game-data/levels/load_screen/grass.jpg
+background_music: game-data/music/music.wav
+wayfinding: game-data/levels/load_screen/wayfinding.yml
 measurements:
   width: 640
   height: 480
