--- a/sun/test-data/demo.yml
+++ b/sun/test-data/demo.yml
@@ -2,11 +2,13 @@ game:
   width: 640
   height: 480
   collision_response: "test-data/collision_response/collision_response.yml"
-  level: "game-data/levels/demo/demo.yml"
+  level: "test-data/levels/demo/demo.yml"
   input_manager: "test-data/input/input_config.yml"
-  player: "game-data/players/player.yml"
-  sound_manager: "game-data/sounds/sound_config.yml"
-  heads_up_display: "game-data/hud/hud_config.yml"
+  player: "test-data/players/player.yml"
+  sound_manager: "test-data/sounds/sound_config.yml"
+  heads_up_display: "test-data/hud/hud_config.yml"
   new_game_level: "test-data/levels/demo/demo.yml"
   menu_for_load_game: "test-data/menus/load_game.yml"
   menu_for_save_game: "test-data/menus/save_game.yml"
+  game_load_path: "test-data/loads/"
+  game_over_menu: "test-data/menus/game_over.yml"
