--- a/sun/test-data/splash.yml
+++ b/sun/test-data/splash.yml
@@ -11,3 +11,4 @@ game:
   menu_for_load_game: "test-data/menus/load_game.yml"
   game_load_path: "test-data/loads/"
   splash_screen: "test-data/screens/splash_screen.png"
+  menu_for_main: "test-data/menus/main.yml"
