added crappypiano.wav, drumbeats.wav and xnckv_mono.wav. Removed music.wav as it's mission impossible and no longer needed.

--- a/sun/game-data/levels/demo/demo.yml
+++ b/sun/game-data/levels/demo/demo.yml
@@ -1,5 +1,6 @@
 name: demo
 background_image: game-data/levels/demo/grass.jpg
+background_music: game-data/music/drumbeats.wav
 wayfinding: game-data/levels/demo/wayfinding.yml
 reward_level: game-data/levels/reward/reward.yml
 measurements:
