--- a/sun/game-data/loads/2/savedata.yml
+++ b/sun/game-data/loads/2/savedata.yml
@@ -1,4 +1,5 @@
---- 
-savedata: 
+---
+savedata:
   level: game-data/levels/reward/reward.yml
-  player: game-data/loads/2/player.yml
+  player: !binary |-
+    Z2FtZS1kYXRhL2xvYWRzLzIvcGxheWVyLnltbA==
