--- a/sun/game-data/game.yml
+++ b/sun/game-data/game.yml
@@ -3,8 +3,8 @@ game:
   height: 480
   collision_response: "game-data/collision_response/collision_response.yml"
   level: "game-data/levels/demo/demo.yml"
-  input_manager: "game-data/input/input_config.yml"
+  input_controller: "game-data/input/input_config.yml"
   player: "game-data/players/player.yml"
-  sound_manager: "game-data/sounds/sound_config.yml"
+  sound_controller: "game-data/sounds/sound_config.yml"
   heads_up_display: "game-data/hud/hud_config.yml"
   menu_for_main: "game-data/menus/main.yml"
