--- a/sun/game-data/new_game_load_screen.yml
+++ b/sun/game-data/new_game_load_screen.yml
@@ -3,9 +3,9 @@ game:
   height: 480
   collision_response: "game-data/collision_response/collision_response.yml"
   level: "game-data/levels/load_screen/load_screen.yml"
-  input_manager: "game-data/input/input_config.yml"
+  input_controller: "game-data/input/input_config.yml"
   player: "game-data/players/load_screen_player.yml"
-  sound_manager: "game-data/sounds/sound_config.yml"
+  sound_controller: "game-data/sounds/sound_config.yml"
   heads_up_display: "game-data/hud/hud_config.yml"
   new_game_level: "game-data/levels/demo/demo.yml"
   menu_for_load_game: "game-data/menus/load_game.yml"
