wired in new sound effects for weapon. Wired in new graphic for weapon but could not get it to show. Wired in new enemies to Demo.

--- a/sun/game-data/enemies/enemy.yml
+++ b/sun/game-data/enemies/enemy.yml
@@ -1,4 +1,5 @@
 enemy:
-  image_path: game-data/sprites/enemy_avatar.bmp
+  image_path: game-data/sprites/enemy1.png
   position: [ 100 , 100 ]
-  velocity: 1
+  health: 10
+  velocity: 3
