--- a/sun/test-data/loadarea/8/player.yml
+++ b/sun/test-data/loadarea/8/player.yml
@@ -1,10 +1,10 @@
---- 
-player: 
+---
+player:
   step_size: 1
-  position: 
+  position:
   - 350
   - 200
-  weapon: 
+  weapon: !!null 
   direction: 0
   health: 5
   max_health: 6
