--- a/sun/game-data/game.yml
+++ b/sun/game-data/game.yml
@@ -8,3 +8,7 @@ game:
   sound_controller: "game-data/sounds/sound_config.yml"
   heads_up_display: "game-data/hud/hud_config.yml"
   menu_for_main: "game-data/menus/main.yml"
+  menu_for_load_game: "game-data/menus/load_game.yml"
+  game_load_path: "game-data/loads/"
+  game_over_menu: "game-data/menus/game_over.yml"
+  menu_for_save_game: "game-data/menus/save_game.yml"
