wired in new load screen background and re-arranged the buttons'/menu ordering

--- a/sun/test-data/loadarea/9/savedata.yml
+++ b/sun/test-data/loadarea/9/savedata.yml
@@ -1,4 +1,5 @@
 ---
 savedata:
   level: test-data/levels/load_screen/load_screen.yml
-  player: test-data/loadarea/9/player.yml
+  player: !binary |-
+    dGVzdC1kYXRhL2xvYWRhcmVhLzkvcGxheWVyLnltbA==
