--- a/sun/test-data/loadarea/8/savedata.yml
+++ b/sun/test-data/loadarea/8/savedata.yml
@@ -1,5 +1,4 @@
 --- 
 savedata: 
   level: test-data/levels/load_screen/load_screen.yml
-  player: !binary |-
-    dGVzdC1kYXRhL2xvYWRhcmVhLzgvcGxheWVyLnltbA==
+  player: test-data/loadarea/8/player.yml
