--- a/sun/game-data/collision_response/collision_response.yml
+++ b/sun/game-data/collision_response/collision_response.yml
@@ -1,6 +1,8 @@
 collision_response:
   "EventEmitter":
     "Player": [ trigger_event1 ]
+  "Weapon":
+    "Primitives::LineSegment": []
   "Primitives::LineSegment":
     "Player": [ blocking2 ]
     "VectorFollower": [ removing2 ]
@@ -10,6 +12,7 @@ collision_response:
     "VectorFollower": [ damaging1, removing2, temporary_message1 ]
     "Primitives::LineSegment": [ blocking1 ]
     "MouseCollisionWrapper": [ mouse_pick1 ]
+    "Weapon": [ damaging1 ]
   "VectorFollower":
     "Player": []
     "Enemy": [ damaging2, removing1 ]
