--- a/sun/game-data/levels/load_screen/load_screen.yml
+++ b/sun/game-data/levels/load_screen/load_screen.yml
@@ -2,6 +2,7 @@ name: load_screen
 background_image: game-data/levels/load_screen/load_screen2.png
 background_music: game-data/music/xnckv_mono.wav
 wayfinding: game-data/levels/load_screen/wayfinding.yml
+player_start_position: [ 123, 345 ]
 measurements:
   width: 640
   height: 480
