--- a/sun/game-data/levels/h_level_1/h_level_1.yml
+++ b/sun/game-data/levels/h_level_1/h_level_1.yml
@@ -1,8 +1,8 @@
 name: level_1
 background_image: game-data/levels/h_level_1/h_level_1.png
 background_music: game-data/music/drumbeats.wav
-wayfinding: game-data/levels/level_1/wayfinding.yml
-reward_level: game-data/levels/level_1_reward/level_1_reward.yml
+wayfinding: game-data/levels/h_level_1/wayfinding.yml
+reward_level: game-data/levels/h_level_1_reward/h_level_1_reward.yml
 player_start_position: [ 50, 425 ]
 
 measurements:
@@ -41,12 +41,22 @@ line_segments:
     end_x: 640
     end_y: 480
     
-  - start_x: 323
+  - start_x: 320
     start_y: 0
-    end_x: 323
+    end_x: 320
     end_y: 140
 
-  - start_x: 323
+  - start_x: 320
     start_y: 280
-    end_x: 323
+    end_x: 320
+    end_y: 480
+
+  - start_x: 324
+    start_y: 0
+    end_x: 324
+    end_y: 140
+
+  - start_x: 324
+    start_y: 280
+    end_x: 324
     end_y: 480
