--- a/sun/test-data/levels/reward/reward.yml
+++ b/sun/test-data/levels/reward/reward.yml
@@ -27,6 +27,11 @@ event_areas:
     bottom_right: [ 280, 180 ]
     label: Reward
     action: take_reward
+  - top_left: [ 400, 10 ]
+    bottom_right: [ 600, 180 ]
+    label: Upgrade Player Avatar
+    action: upgrade_player
+    action_argument: foo/bar/player42.yml
   - top_left: [ 360, 280 ]
     bottom_right: [ 630, 470 ]
     label: Save
