added msg for new game event

--- a/sun/game-data/levels/load_screen/load_screen.yml
+++ b/sun/game-data/levels/load_screen/load_screen.yml
@@ -27,6 +27,9 @@ event_areas:
   - top_left: [ 72, 320 ]
     bottom_right: [ 264, 410 ]
     action: queue_start_new_game_event
+    description:
+      - ...had it all...ack...and whit...
+      - ...answe...find...questio...
   - top_left: [ 379, 121 ]
     bottom_right: [ 572, 211 ]
     action: queue_load_game_event
