--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -2,15 +2,16 @@
 player:
   step_size: 1
   position:
-  - 434.0876470176332
-  - 178.19632555158816
+  - 416.61722374734023
+  - 168.60872446452552
   weapon_yaml: game-data/equipment/gun.yml
-  direction: 45
+  direction: 50
   health: 50
   max_health: 50
   turn_speed: 5
   movement_distance: 2
   menu_action_delay: 12
   enemies_killed: 0
-  image_path: game-data/sprites/player20120411.png
+  image_path: game-data/sprites/player_white_circle.png
   collision_priority: 4
+  base_accuracy: 100
