--- a/sun/test-data/loads/3/player.yml
+++ b/sun/test-data/loads/3/player.yml
@@ -4,6 +4,7 @@ player:
   position: 
   - 350
   - 200
+  weapon: 
   direction: 0
   health: 5
   max_health: 6
@@ -11,6 +12,4 @@ player:
   movement_distance: 2
   menu_action_delay: 12
   enemies_killed: 0
-  image_path: test-data/sprites/player20120411.png
-  collision_priority: 4
-  base_accuracy: 100
+  image_path: test-data/sprites/avatar.bmp
