--- a/sun/game-data/loads/1/savedata.yml
+++ b/sun/game-data/loads/1/savedata.yml
@@ -3,3 +3,5 @@ savedata:
   level: game-data/levels/h_level_1_reward/h_level_1_reward.yml
   player: !binary |-
     Z2FtZS1kYXRhL2xvYWRzLzEvcGxheWVyLnltbA==
+  player_inventory: !binary |-
+    Z2FtZS1kYXRhL2xvYWRzLzEvaW52ZW50b3J5LnltbA==
