--- a/sun/game-data/loads/2/savedata.yml
+++ b/sun/game-data/loads/2/savedata.yml
@@ -1,5 +1,7 @@
 ---
 savedata:
-  level: game-data/levels/reward/reward.yml
+  level: game-data/levels/h_level_2_reward/h_level_2_reward.yml
   player: !binary |-
     Z2FtZS1kYXRhL2xvYWRzLzIvcGxheWVyLnltbA==
+  player_inventory: !binary |-
+    Z2FtZS1kYXRhL2xvYWRzLzIvaW52ZW50b3J5LnltbA==
