working on moving key pieces to cpp, still in proof of concept state

--- a/spikes/cuke-cpp/nbproject/project.properties
+++ b/spikes/cuke-cpp/nbproject/project.properties
@@ -4,7 +4,7 @@ javac.classpath=
 main.file=ripmunk/extconf.rb
 platform.active=Ruby_4
 source.encoding=UTF-8
-src.dir=${file.reference.cuke-c-lib}
 src.ext.dir=ext
+src.lib.dir=lib
 test.features.dir=features
-test.src.dir=${file.reference.cuke-c-test}
+test.test.dir=test
