added back button for level and player w/o weapon

--- a/sun/test-data/levels/equip/equip.yml
+++ b/sun/test-data/levels/equip/equip.yml
@@ -31,3 +31,9 @@ event_areas:
     description:
       - Change your equipment
       - See all your weapons
+  - top_left: [ 10, 250 ]
+    bottom_right: [ 400, 500 ]
+    label: Back
+    action: back_to_level
+    description:
+      - Something
